# MergeSortAssignment

./: CMakeLists.txt  README.md  employees.txt  readme.txt
output/: employees.txt
src/: employee.cpp  employee.h  main.cpp  merge_sort.cpp  merge_sort.h  operations.cpp  operations.h
