cmake_minimum_required(VERSION 3.14)
project(Assignment4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment4
        src/main.cpp
        src/employee.cpp
        src/employee.h
        src/merge_sort.cpp
        src/merge_sort.h
        src/operations.cpp
        src/operations.h)
